# ros2_studies

./: README.md
install/: local_setup.sh  setup.sh
install/minimal_class_node/lib/minimal_class_node/: minimal_node_test
install/minimal_class_node/share/minimal_class_node/: package.ps1  package.sh
install/minimal_class_node/share/minimal_class_node/cmake/: minimal_class_nodeConfig.cmake
install/minimal_publisher_class/lib/minimal_publisher_class/: minimal_publisher_test
install/minimal_publisher_class/share/minimal_publisher_class/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minimal_publisher_class/share/minimal_publisher_class/cmake/: minimal_publisher_classConfig.cmake
install/minimal_subscriber_class/lib/minimal_subscriber_class/: callback_subscriber_test
install/minimal_subscriber_class/share/ament_index/resource_index/parent_prefix_path/: minimal_subscriber_class
install/minimal_subscriber_class/share/minimal_subscriber_class/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minimal_timer/lib/minimal_timer/: timer_test
install/minimal_timer/share/minimal_timer/: local_setup.dsv  package.ps1  package.sh  package.xml
install/minimal_timer/share/minimal_timer/cmake/: minimal_timerConfig.cmake
install/my_messages/share/my_messages/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_messages/share/my_messages/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_messages__rosidl_generator_cExport-noconfig.cmake  export_my_messages__rosidl_generator_cppExport.cmake  export_my_messages__rosidl_generator_pyExport-noconfig.cmake  export_my_messages__rosidl_generator_pyExport.cmake  my_messages__rosidl_typesupport_cppExport-noconfig.cmake  my_messages__rosidl_typesupport_introspection_cExport.cmake  my_messages__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/my_messages/share/my_messages/msg/: TwoInts.idl
install/my_messages/share/my_messages/srv/: CalcTwoFloats.idl  CalcTwoFloats_Response.msg
install/my_msg_class/lib/my_msg_class/: my_pub_test  my_sub_test
install/my_msg_class/share/ament_index/resource_index/package_run_dependencies/: my_msg_class
install/my_msg_class/share/my_msg_class/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/minimal_class_node/: CMakeLists.txt  package.xml
src/minimal_class_node/src/: main.cpp  minimal_node.cpp  minimal_node.hpp
src/minimal_publisher_class/: CMakeLists.txt
src/minimal_publisher_class/src/: minimal_publisher.cpp  minimal_publisher.hpp  minimal_publisher_main.cpp
src/minimal_subscriber_class/: CMakeLists.txt
src/minimal_subscriber_class/src/: minimal_subscriber.cpp  minimal_subscriber.hpp  minimal_subscriber_main.cpp
src/minimal_timer/: CMakeLists.txt
src/minimal_timer/src/: main.cpp
src/my_messages/: CMakeLists.txt  package.xml
src/my_messages/msg/: Third.msg
src/my_msg_class/: CMakeLists.txt
src/my_msg_class/src/: my_pub.cpp  my_pub.hpp  my_pub_main.cpp  my_sub.cpp  my_sub.hpp  my_sub_main.cpp
(+17 files in other folders)
